--- a/06-WPFSample/WPFSample-UI/Views/Home/Error.cshtml
+++ b/06-WPFSample/WPFSample-UI/Views/Home/Error.cshtml
@@ -13,6 +13,8 @@
 <body>
     <div> 
         <h1>ERROR ERROR ERROR ERROR</h1>
+        <h2>SE PRODUJO UN ERROR INESPERADO</h2>
+        <img src="http://akphoto4.ask.fm/188/812/845/1280003015-1pqc29l-2i4o0n6ksg9ijlk/original/carita.jpg" alt="ERROR"/>
     </div>
 </body>
 </html>
